fixed responsiveness on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 .perk-container {
   max-width: 1200px;
   margin: 30px auto;
